faltando integrar com openai e pagamento apenas

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
+    "openai": "^4.47.1",
     "prisma": "^5.14.0",
     "venom-bot": "^5.1.0"
   }
