--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "prisma generate",
+    "build": "npx prisma generate && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
